fix footer overflow

--- a/css/basic.css
+++ b/css/basic.css
@@ -53,3 +53,7 @@ h6 {
 main {
   padding-top: 65px;
 }
+
+footer {
+  overflow: hidden;
+}
